# GP

./: .gitignore  Cargo.toml  components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
app/: Cargo.toml  tauri.conf.json
app/src/: call.rs  main.rs  wait.rs
cert/: cert.der
client/: Cargo.toml
client/src/: audio.rs  call.rs  command.rs  device.rs  lib.rs  main.rs  video.rs  wait.rs
common/: Cargo.toml
common/src/: endpoint_config.rs  lib.rs  message.rs
demo/: Cargo.toml
demo/src/: demo-client.rs  lib.rs
quic/: Cargo.toml
quic-proto/: Cargo.toml
quic-udp/: Cargo.toml
quic/examples/: client.rs  server.rs  single_socket.rs
quic/examples/common/: mod.rs
quic/src/: lib.rs
server/: Cargo.toml
server/src/: call.rs  config.rs  exchange.rs  guard.rs  handler.rs  keepalive.rs  main.rs  wait.rs
server/src/handler/: handle_call.rs
src/: App.vue  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Call.vue  Do.vue  Init.vue  Play.vue  Start.vue  Wait.vue
test/: Cargo.toml
test/Server/: Cargo.toml
test/Server/src/: connection.rs  main.rs  transmission.rs
test/benches/: connection.rs  quic_vs_tcp.rs  transmission.rs
test/cert/: key.der
test/src/: demo-server.rs
vue/: App.vue  main.ts  styles.css
vue/components/: Wait.vue
