[package]
name = "app"
version = "0.0.0"
description = "QUIC-based audio and video communication client"
authors = ["Hughsean.Feng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }

anyhow = "1.0.81"

opencv = "0.91.3"
cpal = "0.15.3"

base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

quic = { package = "quinn", version = "0.10.2" }

client = { path = "../client" }
common = { path = "../common" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
