[package]
version = "0.1.0"
name = "server"
edition = "2021"
workspace = ".."

[dependencies]
quic = { package = "quinn" ,version = "0.10.2"}
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.21.0", default-features = false, features = ["quic"] }
common = { path = "../common" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
clap = { version = "4.5.4", features = ["derive"] }


anyhow = "1.0.81"
log = "0.4.21"
env_logger = "0.11.3"